fix overflowing width

--- a/client/src/components/Home.css
+++ b/client/src/components/Home.css
@@ -1,6 +1,5 @@
 .Home {
   margin: 5em auto;
-  width: 40em;
   height: 60em;
   
   display: grid;
